--- a/src/App.css
+++ b/src/App.css
@@ -63,14 +63,106 @@ input, .filterContainer {
   background: none;
 }
 
-.errorMessage {
-
-}
-
 .filterButton {
   width: 25%;
   height: 40px;
   border: none;
   border-radius: 20px;
   background-color: greenyellow;
+}
+
+/* Answer */
+
+.optionsContainer {
+  width: 50%;
+  height: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.boolean-option-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.boolean-option, .multiple-option {
+  width: 45%;
+  height: 50px;
+  border: none;
+  border-radius: 30px;
+  color: white;
+}
+
+.boolean-option:nth-child(1) {
+  background-color: green;
+}
+
+.boolean-option:nth-child(2) {
+  background-color: red;
+}
+
+.multiple-option:nth-child(1) {
+  background-color: #2326cc;
+}
+
+.multiple-option:nth-child(2) {
+  background-color: #f542cb;
+}
+
+.multiple-option:nth-child(3) {
+  background-color: #de8900;
+}
+
+.multiple-option:nth-child(4) {
+  background-color: #06a600;
+}
+
+/* Answer Result */
+
+.answerResult button {
+  width: 20%;
+  height: 30px;
+  border: none;
+  border-radius: 20px;
+}
+
+.correct {
+  color: green;
+}
+
+.correct button {
+  background-color: green;
+}
+
+.wrong {
+  color: red
+}
+
+.wrong button {
+  background-color: #cc1010;
+}
+
+.resultIconContainer {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.resultIcon {
+  width: 20px;
+  height: auto;
+  margin: auto 10px;
+}
+
+.resultIcon img {
+  width: 100%;
+  height: auto;
 }
