changed some functionality

--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,11 @@ button:active {
 }
 
 .show {
-  display: block;
+  visibility: visible;
 }
 
 .hide {
-  display: none;
+  visibility: hidden
 }
 
 
