--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,27 @@ input, .filterContainer {
   background-color: greenyellow;
 }
 
-/* Answer */
+/* Quiz */
+
+.quizStatus {
+  margin-bottom: 50px;
+}
+
+.question {
+  width: 60%;
+  margin: 10px auto;
+  font-size: 20px;
+}
+
+/* Answers */
+
+.answerResult-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 20vh;
+}
 
 .optionsContainer {
   width: 50%;
@@ -165,8 +185,6 @@ input, .filterContainer {
 .resultIconContainer p:last-child {
   margin-bottom: 10px;
 }
-
-
 
 .resultIcon {
   width: 30px;
