--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,10 @@ button:active {
 
 /* Question Filter */
 
+.trivia-container {
+  flex: 2;
+}
+
 .questionFilter {
   width: 60%;
   height: 50vh;
@@ -194,4 +198,166 @@ input::placeholder {
   border: none;
   color: #ff4ad8;
   font-weight: bold;
+}
+
+
+/* Responsive CSS */
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  h2 {
+    font-size: 15px;
+    width: 80%;
+    margin: 15px auto;
+  }
+
+  /* Question Filter */
+
+  .questionFilter {
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  input, .filterContainer {
+    width: 70%;
+    height: 12%;
+    padding: 0 15px;
+  }
+
+  .filterContainer select {
+    height: 100%;
+  }
+
+  input, .filterContainer select {
+    font-size: 8px;
+  }
+
+  .filterButton {
+    width: 50%;
+    height: 12%;
+  }
+
+  .errorMessage {
+    width: 80%
+  }
+
+  .errorMessage p {
+    font-size: 10px;
+  }
+
+  /* Quiz */
+
+  .questionContainer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .quizStatus {
+    margin-bottom: 0;
+    font-size: 12px;
+  }
+
+  .question {
+    margin-top: 0;
+    width: 85%;
+    font-size: 14px;
+  }
+
+  .optionsContainer {
+    width: 80%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+
+  }
+
+  .resultIconContainer {
+    width: 80%;
+    margin-top: 0;
+  }
+
+  .resultIconContainer p {
+    width: 100%;
+    font-size: 12px;
+  }
+
+  .resultIconContainer article p:first-child {
+    display: none;
+  }
+
+  /* Answers */
+
+  .answers {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .multiple-option {
+    width: 100%;
+    height: 20%;
+    margin: 5px auto;
+    font-size: 8px;
+    padding: 0 15px;
+  }
+
+  .boolean-option-container {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .boolean-option {
+    width: 100%;
+    height: 40px;
+    margin: 10px auto;
+  }
+
+  .largeAnswer {
+    font-size: 6px;
+  }
+
+  /* Answer Result */
+
+  .answerResult-container {
+    height: 20vh;
+  }
+
+  .resultIcon {
+    width: 20px;
+    height: auto;
+  }
+
+  .answerResult button {
+    width: 70%;
+    height: 30px;
+    font-size: 10px;
+  }
+
+  /* Quiz Finished */
+
+  .restartButton {
+    width: 75%;
+    height: 40px;
+  }
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
 }
