--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-family: Montserrat;
+  font-family: Montserrat, Helvetica;
 }
 
 input, select, button {
