--- a/src/App.css
+++ b/src/App.css
@@ -342,6 +342,34 @@ input::placeholder {
 
 }
 
+/* Lanscape Phones */
+@media only screen 
+    and (min-width: 320px) 
+    and (max-width: 600px) 
+    and (orientation: landscape) {
+
+      h1, h2 {
+        margin-top: 0;
+      }
+
+      .questionFilter {
+        height: 70vh
+      }
+
+      .questionFilter input {
+        flex: 1;
+      }
+      
+      .filterContainer {
+        flex: 1;
+      }
+      
+      .filterButton {
+        width: 40%;
+        height: 15%;
+      }
+}
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
 
