--- a/src/App.css
+++ b/src/App.css
@@ -345,28 +345,94 @@ input::placeholder {
 /* Lanscape Phones */
 @media only screen 
     and (min-width: 320px) 
-    and (max-width: 600px) 
+    and (max-width: 700px) 
     and (orientation: landscape) {
 
       h1, h2 {
         margin-top: 0;
       }
 
+      h1 {
+        margin-bottom: 10px;
+      }
+
+      /* Question Filter */
+
       .questionFilter {
         height: 70vh
       }
 
       .questionFilter input {
-        flex: 1;
+        font-size: 10px;
       }
-      
-      .filterContainer {
-        flex: 1;
+
+      .filterContainer select {
+        font-size: 10px;
       }
       
       .filterButton {
         width: 40%;
-        height: 15%;
+        height: 12%;
+      }
+
+      /* Quiz */
+
+      .quizStatus {
+        margin-bottom: 10px;
+        font-size: 12px;
+      }
+
+      .quizStatus p {
+        margin: 8px auto;
+      }
+
+      .question {
+        font-size: 14px;
+        width: 85%;
+      }
+
+      .optionsContainer {
+        width: 80%;
+        height: 100px;
+      }
+
+      .boolean-option, .multiple-option {
+        height: 40px;
+        font-size: 10px;
+      }
+
+      .largeAnswerMobile {
+        font-size: 7px;
+      }
+
+      .resultIconContainer {
+        width: 80%;
+        margin-top: 10px;
+      }
+
+      .resultIcon {
+        width: 18px;
+      }
+
+      .resultIconContainer article {
+        width: 100%;
+      }
+
+      .resultIconContainer p {
+        font-size: 10px;
+      }
+
+      .resultIconContainer p:nth-child(2) {
+        display: none;
+      }
+
+      .answerResult-container {
+        height: 15vh;
+      }
+
+      .answerResult button {
+        width: 50%;
+        height: 30px;
       }
 }
 
