changed some css for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -422,7 +422,7 @@ input::placeholder {
         font-size: 10px;
       }
 
-      .resultIconContainer p:nth-child(2) {
+      .wrongResultContainer p:nth-child(2) {
         display: none;
       }
 
